add a script for sending bulk emails

--- a/templates/parking.html
+++ b/templates/parking.html
@@ -2,12 +2,10 @@
   <head></head>
   <body>
     <font size="4">
-      <p>Hello {{name}}!</p>
+      <p>Hello Hacker!</p>
 
       <p>
-        Thank you for registering for {ehacks} 2023. You're registration is
-        confirmed. We are excited to have you join us for the event! We will be
-        sending you more information about the event prior to the start date.
+        This is a test email
       </p>
 
       <p>
