Update parking email

--- a/templates/parking.html
+++ b/templates/parking.html
@@ -1,22 +1,74 @@
 <html>
   <head></head>
-  <body>
-    <font size="4">
-      <p>Hello Hacker!</p>
+  <body style="font-size: 18px; font-family: Arial, Helvetica, sans-serif">
+    <p>Hello Hacker!</p>
 
-      <p>
-        This is a test email
-      </p>
+    <p>
+      Thank you all for registering for eHacks 2023. We are excited to meet
+      everyone! A couple of quick notes regarding the event:
+    </p>
 
-      <p>
-        Please join our discord to meet your fellow hackers and stay up to date.
-        It will be our main form of communication and we will be releasing any
-        important announcements regarding the event through Discord:
-        {{discord_link}}
-      </p>
+    <h1>Discord</h1>
+    <p>
+      If you have not joined our Discord server, please do so here:
+      {{discord_link}}. We will be using Discord as our main form of
+      communication and will be releasing any important announcements regarding
+      the event through Discord. It's also a space that you can use to
+      communicate with other hackers.
+    </p>
 
-      <p>Best Regards,</p>
-      <p>eHacks Team</p>
-    </font>
+    <h1>Parking</h1>
+    <p>
+      Parking is very scarce around the venue. The parking lot around the venue
+      is unfortunately not available to students. Street parking is an option,
+      but it is not free the entire weekend and also not recommended. There are
+      some parking lots around the venue (<a
+        href="https://www.google.com/maps/d/viewer?mid=1gW_qdpjH40lJdt1AeolEgdQasas&ll=38.63036612889975%2C-90.19501285000003&z=16"
+        >Link to Google Maps Parking Info</a
+      >), but their price fluctuates based on the events going on in the city.
+    </p>
+
+    <h3>If you are an SIUE Student...</h3>
+    <p>
+      we <b>really</b> recommend taking the bus. If you had marked that you were
+      planning on providing your own transportation, you can have that changed
+      by replying to this email indicating that you would like to take the bus
+      <strong>by February 24th</strong>.
+    </p>
+
+    <p>
+      Parking in the SIUE red lots is free over the weekend. We will send out
+      more information regarding specific bus details in the coming days.
+    </p>
+
+    <h3>If you aren't an SIUE Student...</h3>
+    <p>
+      we really recommend carpooling if possible. Unfortunately, we do not have
+      much control over the parking situation. If you are attending from St.
+      Louis, the T-Rex Innovation Center is a few blocks away from a couple of
+      MetroLink Stations (8th & Pine and Convention Center).
+    </p>
+
+    <p>
+      The MetroBus also has a couple of routes that go near T-Rex. Here is a
+      link to a map of the city's Metro routes:
+      <a
+        href="https://www.metrostlouis.org/wp-content/uploads/2019/11/191115v2-Metro-Missouri-Map-w_Dwntn-1.pdf"
+        >Link to St. Louis Metro System Map</a
+      >. T-Rex is located on Washington Ave, in between N 9th St and N 10th St
+      and next to "The Dome at America's Center" (<a
+        href="https://www.google.com/maps/search/bus/@38.6313445,-90.1975066,16z/data=!3m1!4b1!4m8!2m7!3m6!1sbus!2sT-REX,+911+Washington+Ave+Ste+500,+St.+Louis,+MO+63101!3s0x87d8b31eeb040231:0x66b282295534906a!4m2!1d-90.1931878!2d38.63144"
+        >Link to T-Rex on Google Maps</a
+      >).
+    </p>
+
+    <p>
+      If you have any questions before the event, feel free to email
+      <a href="mailto:siue.ehacks@gmail.com">siue.ehacks@gmail.com</a>, or reach
+      out to anyone with the "Organizer" role in the Discord server.
+    </p>
+
+    <p>Best Regards,</p>
+    <p>eHacks Team</p>
   </body>
 </html>
