--- a/templates/acceptance.html
+++ b/templates/acceptance.html
@@ -1,7 +1,6 @@
 <html>
   <head></head>
-  <body>
-    <font size="4">
+  <body style="font-size: 18px; font-family: Arial, Helvetica, sans-serif;">
       <p>Hello {{name}}!</p>
 
       <p>
@@ -19,6 +18,5 @@
 
       <p>Best Regards,</p>
       <p>eHacks Team</p>
-    </font>
   </body>
 </html>
