--- a/templates/parking.html
+++ b/templates/parking.html
@@ -43,7 +43,7 @@
 
     <h3>If you aren't an SIUE Student...</h3>
     <p>
-      we really recommend carpooling if possible. Unfortunately, we do not have
+      we <b>really</b> recommend carpooling if possible. Unfortunately, we do not have
       much control over the parking situation. If you are attending from St.
       Louis, the T-Rex Innovation Center is a few blocks away from a couple of
       MetroLink Stations (8th & Pine and Convention Center).
