add email templates

--- a/templates/bus.html
+++ b/templates/bus.html
@@ -4,8 +4,7 @@
     <p>Hello Hacker!</p>
 
     <p>
-      Thank you all for registering for eHacks 2023. We are excited to meet
-      everyone! A couple of quick notes regarding the event:
+      You are receiving this email because you indicated that you would like to take the bus to eHacks.
     </p>
 
     <h1>Discord</h1>
