added email templates

--- a/templates/day.html
+++ b/templates/day.html
@@ -37,12 +37,21 @@
       <li>ID</li>
       <li>Hardware (if you are interested in doing hardware based project)</li>
     </ul>
+    <p>Things <strong>NOT</strong> to bring:</p>
+    <ul>
+      <li>Virus of any kind. If you are sick, stay home</li>
+      <li>Anything illegal. (Please use common sense)</li>
+    </ul>
 
     <h1>Bus</h1>
     <p>
-      For those taking the bus, it will leave from the engineering building on
-      SIUE's campus at 4:20pm on Friday. It will make a trip Friday and then
-      make a trip Sunday, leaving from T-Rex at 1:00pm.
+      For those taking the bus, it will leave from the circle right outside of
+      the engineering building on SIUE's campus at 4:20pm on Friday. It will
+      make a trip Friday and then make a trip Sunday, leaving from T-Rex at
+      1:00pm.
+      <strong
+        >Only those who have inicated that they would like to take the bus </strong
+      >will be able to take the bus to T-Rex.
     </p>
 
     <h1>Parking</h1>
